# docs-ai-scrap

./: .gitignore  .yarnrc.yml  Dockerfile  Makefile  README.md  bak-main.py  batch.sh  get-all-images.py  get-images-list.sh  main.py  main2.py  options.py  package.json  pyproject.toml  requirements.txt  scrap-release-list.txt  scrap-release-note.py  scrap-release.sh  store.js  store.py  test.py  whatap-temp.json
.github/workflows/: scrapy-app.yml  update-whatap-docs.yml
deploy/: db.py  ddl.sql  job.yaml  main.py
