[tool.poetry]
name = "docs-scrap"
version = "0.1.0"
description = ""
authors = ["whatap-docs <kj.im@whatap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.19.0"
scrapy = "^2.11.1"
uuid = "^1.30"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.3"
poetry-dotenv = "^0.4.0"
supabase = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

